TerraformSubsetParser.py
# Generated from TerraformSubset.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class TerraformSubsetParser ( Parser ):

    grammarFileName = "TerraformSubset.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'provider'", "'{'", "'}'", "'resource'", 
                     "'variable'", "'output'", "'='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "IDENTIFIER", "STRING", "WS" ]

    RULE_terraform = 0
    RULE_provider = 1
    RULE_providerBody = 2
    RULE_resource = 3
    RULE_resourceBody = 4
    RULE_variable = 5
    RULE_variableBody = 6
    RULE_output = 7
    RULE_outputBody = 8
    RULE_keyValuePair = 9

    ruleNames =  [ "terraform", "provider", "providerBody", "resource", 
                   "resourceBody", "variable", "variableBody", "output", 
                   "outputBody", "keyValuePair" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    IDENTIFIER=8
    STRING=9
    WS=10

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class TerraformContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(TerraformSubsetParser.EOF, 0)

        def provider(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TerraformSubsetParser.ProviderContext)
            else:
                return self.getTypedRuleContext(TerraformSubsetParser.ProviderContext,i)


        def resource(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TerraformSubsetParser.ResourceContext)
            else:
                return self.getTypedRuleContext(TerraformSubsetParser.ResourceContext,i)


        def variable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TerraformSubsetParser.VariableContext)
            else:
                return self.getTypedRuleContext(TerraformSubsetParser.VariableContext,i)


        def output(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TerraformSubsetParser.OutputContext)
            else:
                return self.getTypedRuleContext(TerraformSubsetParser.OutputContext,i)


        def getRuleIndex(self):
            return TerraformSubsetParser.RULE_terraform

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerraform" ):
                listener.enterTerraform(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerraform" ):
                listener.exitTerraform(self)




    def terraform(self):

        localctx = TerraformSubsetParser.TerraformContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_terraform)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 26
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 114) != 0):
                self.state = 24
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [1]:
                    self.state = 20
                    self.provider()
                    pass
                elif token in [4]:
                    self.state = 21
                    self.resource()
                    pass
                elif token in [5]:
                    self.state = 22
                    self.variable()
                    pass
                elif token in [6]:
                    self.state = 23
                    self.output()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 28
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 29
            self.match(TerraformSubsetParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProviderContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(TerraformSubsetParser.IDENTIFIER, 0)

        def providerBody(self):
            return self.getTypedRuleContext(TerraformSubsetParser.ProviderBodyContext,0)


        def getRuleIndex(self):
            return TerraformSubsetParser.RULE_provider

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProvider" ):
                listener.enterProvider(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProvider" ):
                listener.exitProvider(self)




    def provider(self):

        localctx = TerraformSubsetParser.ProviderContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_provider)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 31
            self.match(TerraformSubsetParser.T__0)
            self.state = 32
            self.match(TerraformSubsetParser.IDENTIFIER)
            self.state = 33
            self.match(TerraformSubsetParser.T__1)
            self.state = 34
            self.providerBody()
            self.state = 35
            self.match(TerraformSubsetParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProviderBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def keyValuePair(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TerraformSubsetParser.KeyValuePairContext)
            else:
                return self.getTypedRuleContext(TerraformSubsetParser.KeyValuePairContext,i)


        def getRuleIndex(self):
            return TerraformSubsetParser.RULE_providerBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProviderBody" ):
                listener.enterProviderBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProviderBody" ):
                listener.exitProviderBody(self)




    def providerBody(self):

        localctx = TerraformSubsetParser.ProviderBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_providerBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==8:
                self.state = 37
                self.keyValuePair()
                self.state = 42
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ResourceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(TerraformSubsetParser.IDENTIFIER)
            else:
                return self.getToken(TerraformSubsetParser.IDENTIFIER, i)

        def resourceBody(self):
            return self.getTypedRuleContext(TerraformSubsetParser.ResourceBodyContext,0)


        def getRuleIndex(self):
            return TerraformSubsetParser.RULE_resource

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterResource" ):
                listener.enterResource(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitResource" ):
                listener.exitResource(self)




    def resource(self):

        localctx = TerraformSubsetParser.ResourceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_resource)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self.match(TerraformSubsetParser.T__3)
            self.state = 44
            self.match(TerraformSubsetParser.IDENTIFIER)
            self.state = 45
            self.match(TerraformSubsetParser.IDENTIFIER)
            self.state = 46
            self.match(TerraformSubsetParser.T__1)
            self.state = 47
            self.resourceBody()
            self.state = 48
            self.match(TerraformSubsetParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ResourceBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def keyValuePair(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TerraformSubsetParser.KeyValuePairContext)
            else:
                return self.getTypedRuleContext(TerraformSubsetParser.KeyValuePairContext,i)


        def getRuleIndex(self):
            return TerraformSubsetParser.RULE_resourceBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterResourceBody" ):
                listener.enterResourceBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitResourceBody" ):
                listener.exitResourceBody(self)




    def resourceBody(self):

        localctx = TerraformSubsetParser.ResourceBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_resourceBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==8:
                self.state = 50
                self.keyValuePair()
                self.state = 55
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(TerraformSubsetParser.IDENTIFIER, 0)

        def variableBody(self):
            return self.getTypedRuleContext(TerraformSubsetParser.VariableBodyContext,0)


        def getRuleIndex(self):
            return TerraformSubsetParser.RULE_variable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariable" ):
                listener.enterVariable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariable" ):
                listener.exitVariable(self)




    def variable(self):

        localctx = TerraformSubsetParser.VariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_variable)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.match(TerraformSubsetParser.T__4)
            self.state = 57
            self.match(TerraformSubsetParser.IDENTIFIER)
            self.state = 58
            self.match(TerraformSubsetParser.T__1)
            self.state = 59
            self.variableBody()
            self.state = 60
            self.match(TerraformSubsetParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def keyValuePair(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TerraformSubsetParser.KeyValuePairContext)
            else:
                return self.getTypedRuleContext(TerraformSubsetParser.KeyValuePairContext,i)


        def getRuleIndex(self):
            return TerraformSubsetParser.RULE_variableBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableBody" ):
                listener.enterVariableBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableBody" ):
                listener.exitVariableBody(self)




    def variableBody(self):

        localctx = TerraformSubsetParser.VariableBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_variableBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==8:
                self.state = 62
                self.keyValuePair()
                self.state = 67
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OutputContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(TerraformSubsetParser.IDENTIFIER, 0)

        def outputBody(self):
            return self.getTypedRuleContext(TerraformSubsetParser.OutputBodyContext,0)


        def getRuleIndex(self):
            return TerraformSubsetParser.RULE_output

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOutput" ):
                listener.enterOutput(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOutput" ):
                listener.exitOutput(self)




    def output(self):

        localctx = TerraformSubsetParser.OutputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_output)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(TerraformSubsetParser.T__5)
            self.state = 69
            self.match(TerraformSubsetParser.IDENTIFIER)
            self.state = 70
            self.match(TerraformSubsetParser.T__1)
            self.state = 71
            self.outputBody()
            self.state = 72
            self.match(TerraformSubsetParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OutputBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def keyValuePair(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TerraformSubsetParser.KeyValuePairContext)
            else:
                return self.getTypedRuleContext(TerraformSubsetParser.KeyValuePairContext,i)


        def getRuleIndex(self):
            return TerraformSubsetParser.RULE_outputBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOutputBody" ):
                listener.enterOutputBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOutputBody" ):
                listener.exitOutputBody(self)




    def outputBody(self):

        localctx = TerraformSubsetParser.OutputBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_outputBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==8:
                self.state = 74
                self.keyValuePair()
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class KeyValuePairContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(TerraformSubsetParser.IDENTIFIER, 0)

        def STRING(self):
            return self.getToken(TerraformSubsetParser.STRING, 0)

        def getRuleIndex(self):
            return TerraformSubsetParser.RULE_keyValuePair

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterKeyValuePair" ):
                listener.enterKeyValuePair(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitKeyValuePair" ):
                listener.exitKeyValuePair(self)




    def keyValuePair(self):

        localctx = TerraformSubsetParser.KeyValuePairContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_keyValuePair)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(TerraformSubsetParser.IDENTIFIER)
            self.state = 81
            self.match(TerraformSubsetParser.T__6)
            self.state = 82
            self.match(TerraformSubsetParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





